# pastaPi

./: CMakeLists.txt  LICENSE  README.md  changelog.txt
editor/: CMakeLists.txt
editor/source/: main.cc  node.cc  node.h  package.cc  package.h
editor/ui/: colors.cc  editor.cc  editor.h  editor.ui  editor_resources.qrc  elementstree.cc  link_item.cc  package_view.cc  recentchangesdialog.cc  recentchangesdialog.h  recentchangesdialog.ui  socket_item.cc  socket_item.h
libspaghetti/: CMakeLists.txt
libspaghetti/include/spaghetti/: dummynode.h  editor.h  element.h  node.h  package.h  sockvalues.h  utils.h  version.h.in
libspaghetti/include/spaghetti/custom_value_types/: all.h  matrix.h  safevalue.h
libspaghetti/source/: element.cc  node.cc  package.cc  registry.cc  shared_library.h  sockvalues.cc
libspaghetti/source/elements/opencv/: cap.cc  cap.h  color2gray.cc  crop_image.cc  drawcontours.cc  findcontours.cc  imwrite.cc  medianblur.cc  mog2.cc  resize.cc  videodisplay.cc  writer.cc
libspaghetti/source/elements/ui/: string_info.cc
libspaghetti/source/elements/values/: concat.cc  const_string.cc  convert.cc
libspaghetti/source/icons/: icons.qrc
libspaghetti/source/nodes/: all.h
libspaghetti/source/nodes/logic/: all.h
libspaghetti/source/nodes/opencv/: all.h  videodisplay.cc  videodisplay.h
libspaghetti/source/nodes/ui/: all.h  string_info.cc  string_info.h
libspaghetti/source/nodes/values/: all.h  const_string.cc  const_string.h
libspaghetti/source/ui/: aboutpastapi.cc  aboutpastapi.h  aboutpastapi.ui  colors.h  editor.cc  editor.ui  elementstree.cc  elementstree.h  expander_widget.cc  link_item.cc  package_view.cc  socket_item.cc
libspaghettiui/: CMakeLists.txt
libspaghettiui/include/spaghettiui/: api_ui.h  colors.h  editor_package.h  link_item.h  node.h  package.h  package_view.h  socket_item.h
libspaghettiui/source/: colors.cc  link_item.cc  node.cc  package.cc  package_view.cc  socket_item.cc
plugins/: CMakeLists.txt
plugins/example/: CMakeLists.txt  example.cc
plugins/filesystem/: CMakeLists.txt  filesystem.cc
plugins/filesystem/dir_list/: dir_list.cc  dir_list.h  dir_list_node.cc  dir_list_node.h
plugins/filesystem/dir_select/: dir_select.cc  dir_select.h  dir_select_node.cc  dir_select_node.h
plugins/filesystem/file_select/: file_select.cc  file_select.h  file_select_node.cc  file_select_node.h
plugins/logic/: CMakeLists.txt
plugins/logic/counters/: CMakeLists.txt  counters.cc
plugins/logic/counters/count_between/: count_between.cc  count_between.h
plugins/logic/counters/count_down/: count_down.cc  count_down.h
plugins/logic/counters/count_up/: count_up.cc  count_up.h
plugins/logic/gates/: CMakeLists.txt  gates.cc
plugins/logic/gates/and/: and.cc  and.h
plugins/logic/gates/nand/: nand.cc  nand.h
plugins/logic/gates/nor/: nor.cc  nor.h
plugins/logic/gates/not/: not.cc  not.h
plugins/logic/gates/or/: or.cc  or.h
plugins/math/: CMakeLists.txt  math.cc
plugins/math/arithmetic/: CMakeLists.txt  arithmetic.cc  subtraction.cc
plugins/math/arithmetic/absolute/: absolute.cc  absolute.h
plugins/math/arithmetic/addition/: addition.cc  addition.h
plugins/math/arithmetic/division/: division.cc  division.h
plugins/math/arithmetic/modulo/: modulo.cc  modulo.h
plugins/math/arithmetic/multiplication/: multiplication.cc  multiplication.h
plugins/math/arithmetic/power/: power.cc  power.h
plugins/math/arithmetic/square/: square.cc  square.h
plugins/math/arithmetic/subtraction/: subtraction.cc  subtraction.h
plugins/math/rounding/ceil/: ceil.cc  ceil.h
plugins/math/rounding/floor/: floor.cc  floor.h
plugins/math/trigonometry/cosinus/: cosinus.cc  cosinus.h
plugins/math/trigonometry/sinus/: sinus.cc  sinus.h
plugins/math/trigonometry/tangens/: tangens.cc  tangens.h
plugins/opencv/: CMakeLists.txt  opencv.cc
plugins/opencv/dnn/dnn_draw_labels/: dnn_draw_labels.cc  dnn_draw_labels.h
plugins/opencv/dnn/dnn_draw_tracker_labels/: dnn_draw_tracker_labels.cc  dnn_draw_tracker_labels.h
plugins/opencv/dnn/dnn_simple_tracker/: dnn_simple_tracker.cc  dnn_simple_tracker.h
plugins/opencv/dnn/dnn_threshold/: dnn_threshold.cc  dnn_threshold.h
plugins/opencv/dnn/extract_rect/: extract_rect.cc  extract_rect.h
plugins/opencv/dnn/find_class/: find_class.cc  find_class.h
plugins/opencv/dnn/read_classnames/: read_classnames.cc  read_classnames.h
plugins/opencv/dnn/unpack_rect/: unpack_rect.cc  unpack_rect.h
plugins/opencv/dnn/yolo/: yolo.cc  yolo.h  yolo_node.cc  yolo_node.h
plugins/opencv/imcodecs/imwrite/: imwrite.cc  imwrite.h
plugins/opencv/improc/color2gray/: color2gray.cc  color2gray.h
plugins/opencv/improc/crop_image/: crop_image.cc  crop_image.h
plugins/opencv/improc/find_conturs/: findcontours.cc  findcontours.h
plugins/opencv/improc/medianblur/: medianblur.cc  medianblur.h
plugins/opencv/improc/resize/: resize.cc  resize.h
plugins/opencv/ui/draw_contours/: draw_contours.cc  draw_contours.h
plugins/opencv/ui/video_display/: video_display.cc  video_display.h  video_display_node.cc  video_display_node.h
plugins/opencv/video/mog2/: mog2.cc  mog2.h
plugins/opencv/video/video_bufer/: video_bufer.cc  video_bufer.h
plugins/opencv/videoio/video_capture/: video_capture.cc  video_capture.h
plugins/opencv/videoio/video_writer/: video_writer.cc  video_writer.h
plugins/timers/: CMakeLists.txt  timers.cc
plugins/timers/clock/: clock.cc  clock.h  clock_node.cc  clock_node.h
plugins/timers/delta_time/: delta_time.cc  delta_time.h
plugins/timers/sunrise/: sunrise.cc  sunrise.h  sunrise_node.cc  sunrise_node.h
plugins/timers/t_off/: t_off.cc  t_off.h
plugins/timers/t_on/: t_on.cc  t_on.h
plugins/timers/t_pulse/: t_pulse.cc  t_pulse.h
plugins/tkdnn_yolo/: CMakeLists.txt  tkdnn_yolo.cc
plugins/tkdnn_yolo/dnn_tkdnn/: dnn_tkdnn.cc  dnn_tkdnn.h  dnn_tkdnn_node.cc  dnn_tkdnn_node.h
plugins/values/: CMakeLists.txt  values.cc
plugins/values/bool/: const_bool.cc  const_bool.h  const_bool_node.h
plugins/values/bool/const_bool/: const_bool.cc  const_bool_node.cc  (+1 more)
(+99 files in other folders)
